--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -103,8 +103,10 @@ p {
 
 abbr[title],
 abbr[data-bs-original-title] {
+  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   cursor: help;
+  -webkit-text-decoration-skip-ink: none;
   text-decoration-skip-ink: none;
 }
 
@@ -433,7 +435,7 @@ progress {
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
-  --bs-green: #198754;
+  --bs-green: #3FBEAC;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
   --bs-white: #fff;
@@ -450,7 +452,7 @@ progress {
   --bs-gray-900: #212529;
   --bs-primary: #005289;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #3FBEAC;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
@@ -458,7 +460,7 @@ progress {
   --bs-dark: #212529;
   --bs-primary-rgb: 0, 82, 137;
   --bs-secondary-rgb: 108, 117, 125;
-  --bs-success-rgb: 25, 135, 84;
+  --bs-success-rgb: 63, 190, 172;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
@@ -569,15 +571,15 @@ progress {
 }
 
 .table-success {
-  --bs-table-bg: #d1e7dd;
-  --bs-table-striped-bg: #c7dbd2;
+  --bs-table-bg: #d9f2ee;
+  --bs-table-striped-bg: #cee6e2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bcd0c7;
+  --bs-table-active-bg: #c3dad6;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c1d6cc;
+  --bs-table-hover-bg: #c9e0dc;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #bcd0c7;
+  border-color: #c3dad6;
 }
 
 .table-info {
@@ -886,12 +888,12 @@ progress {
 
 .has-green-color,
 .has-green-color:visited {
-  color: #198754;
+  color: #3FBEAC;
 }
 
 .has-green-background-color {
-  background-color: #198754;
-  border-color: #198754;
+  background-color: #3FBEAC;
+  border-color: #3FBEAC;
 }
 
 .has-teal-color,
@@ -966,12 +968,12 @@ progress {
 
 .has-success-color,
 .has-success-color:visited {
-  color: #198754;
+  color: #3FBEAC;
 }
 
 .has-success-background-color {
-  background-color: #198754;
-  border-color: #198754;
+  background-color: #3FBEAC;
+  border-color: #3FBEAC;
 }
 
 .has-info-color,
