--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -18,6 +18,7 @@ h2, .h2 {
   font-size: 40px;
   color: #005289;
   text-transform: uppercase;
+  margin-top: 39px;
   margin-bottom: 39px;
 
   span {
@@ -123,24 +124,29 @@ header.entry-header {
   }
 }
 
+body.home header.entry-header {
+  display: none;
+}
 
 .site-main .wp-block-image img {
   width: 100%;
 }
 
 .wpcf7 {
-  max-width: 66.6% !important;
-  margin: 0 auto;
+  max-width: unset !important;
 }
 
 .ayh-text-block {
-  h2, p, ul {
-    max-width: 66.6%;
-    margin: 0 auto;
-  }
+  padding-left: 176px;
+  padding-right: 176px;
+  flex: 0 1 50% !important;
+  //h2, p, ul {
+  //  max-width: 66.6%;
+  //  margin: 0 auto;
+  //}
 
   h2 {
-    margin: 0 auto 39px;
+    //margin: 0 auto 39px;
   }
 
   .wp-block-column {
@@ -224,4 +230,45 @@ blockquote.wp-block-quote {
 
 .post-35 .entry-content {
   margin: 80px 110px;
+}
+
+.lift-me {
+  color: #242424;
+  width: 360px;
+  margin: 0 auto;
+  position: relative;
+  top: -140px;
+  z-index: 15;
+  font-size: 14px;
+}
+
+body.home #main {
+  position: relative;
+  top: -222px;
+  width: 100vw;
+}
+
+
+.wp-block-cb-carousel .slick-slide {
+  padding: 0;
+}
+
+.text-bold {
+  font-family: 'Gill Sans Bold';
+}
+
+.p-60 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.form-control, .widget_archive select, .widget_categories select, .wpcf7 .wpcf7-validation-errors, .wpcf7 input[type=color], .wpcf7 input[type=date], .wpcf7 input[type=datetime-local], .wpcf7 input[type=datetime], .wpcf7 input[type=email], .wpcf7 input[type=file], .wpcf7 input[type=month], .wpcf7 input[type=number], .wpcf7 input[type=range], .wpcf7 input[type=search], .wpcf7 input[type=submit], .wpcf7 input[type=tel], .wpcf7 input[type=text], .wpcf7 input[type=time], .wpcf7 input[type=url], .wpcf7 input[type=week], .wpcf7 select, .wpcf7 textarea {
+  border-radius: 0;
+  margin-bottom: 10px;
+  padding: 13px 15px;
+}
+
+.btn-outline-primary, .wpcf7 input[type=submit] {
+  color: #fff;
+  background-color: #005289;
 }
